--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -28,7 +28,7 @@ RUN mkdir -p /app/config /app/logs /app/libs
 
 # Copy the compiled output to new image
 COPY --from=builder /conductor/docker/server/bin /app
-COPY --from=builder /conductor/docker/server/config /app/config
+#COPY --from=builder /conductor/docker/server/config /app/config
 COPY --from=builder /conductor/server/build/libs/conductor-server-*-boot.jar /app/libs
 
 # Copy the files for the server into the app folders
