--- a/docker/server/config/config-postgres.properties
+++ b/docker/server/config/config-postgres.properties
@@ -9,7 +9,7 @@ spring.datasource.username=conductor
 spring.datasource.password=conductor
 
 # Hikari pool sizes are -1 by default and prevent startup
-spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.maximum-pool-size=200
 spring.datasource.hikari.minimum-idle=2
 
 # Elastic search instance indexing is enabled.
@@ -23,3 +23,14 @@ conductor.elasticsearch.indexName=conductor
 
 # Load sample kitchen sink workflow
 loadSample=true
+
+# Increases the thread size
+conductor.app.systemTaskWorkerPollInterval=1ms
+conductor.app.systemTaskWorkerThreadCount=500
+conductor.worker.longPollTimeout=0
+conductor.thread.pool.size=500
+conductor.queue.size=500
+conductor.worker.pollInterval=5
+
+conductor.elasticsearch.clusterHealthColor=yellow
+conductor.app.asyncIndexingEnabled=true
