--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '2.3'
 services:
   conductor-server:
     environment:
-      - CONFIG_PROP=config-local.properties
+      - CONFIG_PROP=config-postgres.properties
     image: conductor:server
     build:
       context: ../
@@ -17,60 +17,13 @@ services:
       interval: 60s
       timeout: 30s
       retries: 12
-    links:
-      - elasticsearch:es
-    depends_on:
-      elasticsearch:
-        condition: service_healthy
     logging:
       driver: "json-file"
       options:
         max-size: "1k"
         max-file: "3"
-
-  conductor-ui:
-    environment:
-      - WF_SERVER=http://conductor-server:8080
-    image: conductor:ui
-    build:
-      context: ../
-      dockerfile: docker/ui/Dockerfile
-    networks:
-      - internal
-    ports:
-      - 5000:5000
-    links:
-      - conductor-server
-    stdin_open: true
-
-  elasticsearch:
-    image: elasticsearch:6.8.15
-    environment:
-      - "ES_JAVA_OPTS=-Xms512m -Xmx1024m"
-      - transport.host=0.0.0.0
-      - discovery.type=single-node
-      - xpack.security.enabled=false
     volumes:
-      - esdata-conductor:/usr/share/elasticsearch/data
-    networks:
-      - internal
-    ports:
-      - 9200:9200
-      - 9300:9300
-    healthcheck:
-      test: timeout 5 bash -c 'cat < /dev/null > /dev/tcp/localhost/9300'
-      interval: 5s
-      timeout: 5s
-      retries: 12
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "1k"
-        max-file: "3"
-
-volumes:
-  esdata-conductor:
-    driver: local
+      - ./server/config:/app/config
 
 networks:
   internal:
