--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
     name: Gradle Build and Publish
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Zulu JDK 11
+      - name: Set up Temurin JDK 11
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
