--- a/docker/grpc/docker-compose.yaml
+++ b/docker/grpc/docker-compose.yaml
@@ -32,6 +32,9 @@ services:
     networks:
       - internal
     ports:
+       # if you are on macOS 12(Monterey) or higher you may want to choose another port
+       # or turn off AirPlay Receiver to free up port 5000
+       # https://developer.apple.com/forums/thread/682332
       - 5000:5000
     depends_on:
       - conductor-server
@@ -58,8 +61,10 @@ services:
       retries: 12
 
   elasticsearch:
-    image: elasticsearch:6.8.15
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.8.23
     environment:
+      #https://www.elastic.co/guide/en/elasticsearch/reference/master/_system_call_filter_check.html
+      - bootstrap.system_call_filter=false
       - "ES_JAVA_OPTS=-Xms512m -Xmx1024m"
       - transport.host=0.0.0.0
       - discovery.type=single-node
