--- a/docker/docker-compose-postgres.yaml
+++ b/docker/docker-compose-postgres.yaml
@@ -69,9 +69,11 @@ services:
       test: [ "CMD", "redis-cli","ping" ]
 
   elasticsearch:
-    image: elasticsearch:6.8.15
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.8.23
     container_name: elasticsearch
     environment:
+      #https://www.elastic.co/guide/en/elasticsearch/reference/master/_system_call_filter_check.html
+      - bootstrap.system_call_filter=false
       - "ES_JAVA_OPTS=-Xms512m -Xmx1024m"
       - transport.host=0.0.0.0
       - discovery.type=single-node
