--- a/docker/server/config/config-postgres.properties
+++ b/docker/server/config/config-postgres.properties
@@ -9,8 +9,8 @@ spring.datasource.username=conductor
 spring.datasource.password=conductor
 
 # Hikari pool sizes are -1 by default and prevent startup
-#spring.datasource.hikari.maximum-pool-size=10
-#spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
 
 # Elastic search instance indexing is enabled.
 conductor.indexing.enabled=true
@@ -22,7 +22,7 @@ conductor.elasticsearch.url=http://es:9200
 conductor.elasticsearch.indexName=conductor
 
 # Load sample kitchen sink workflow
-loadSample=false
+loadSample=true
 
 #redis configurations
 conductor.redis.hosts=rs:6379:us-east-1c
