Moves ui image to nginx based reverse-proxy, prebuilt to allow a think container deployment.

--- a/docker/ui/Dockerfile
+++ b/docker/ui/Dockerfile
@@ -1,7 +1,7 @@
 #
 # conductor:ui - Netflix Conductor UI
 #
-FROM node:16-alpine
+FROM node:16-alpine as build-deps
 LABEL maintainer="Netflix OSS <conductor@netflix.com>"
 
 # Install the required packages for the node build
@@ -13,13 +13,14 @@ RUN apk update && apk add --no-cache python3 py3-pip make g++
 WORKDIR /usr/src/app
  
 # Copies package.json to Docker environment in a separate layer as a performance optimization
-COPY ./ui/package.json ./
- 
-# Installs all node packages. Cached unless package.json changes
-RUN yarn install
- 
-# Copies everything else over to Docker environment
-# node_modules excluded in .dockerignore. 
 COPY ./ui .
  
-CMD [ "yarn", "start" ]
+# Installs all node packages. Cached unless package.json changes
+RUN yarn install \
+      && yarn run build
+ 
+FROM nginx:1.12-alpine
+COPY --from=build-deps /usr/src/app/build /usr/share/nginx/html
+COPY ./docker/ui/default.conf /etc/nginx/conf.d/default.conf
+EXPOSE 5000
+CMD ["nginx", "-g", "daemon off;"]
