Specify redis hosts in postgres config properties

--- a/docker/server/config/config-postgres.properties
+++ b/docker/server/config/config-postgres.properties
@@ -3,6 +3,7 @@ conductor.grpc-server.enabled=false
 
 # Database persistence type.
 conductor.db.type=postgres
+conductor.redis.hosts=rs:6379:primary
 
 spring.datasource.url=jdbc:postgresql://postgres:5432/conductor
 spring.datasource.username=conductor
