Add elasticsearch cluster health property

--- a/docker/server/config/config-postgres.properties
+++ b/docker/server/config/config-postgres.properties
@@ -21,6 +21,7 @@ conductor.elasticsearch.url=http://es:9200
 
 # Name of the elasticsearch cluster
 conductor.elasticsearch.indexName=conductor
+conductor.elasticsearch.clusterHealthColor=yellow
 
 # Load sample kitchen sink workflow
 loadSample=true
