Upgrade postgres persistence dependency and turn off kitchen sink example

--- a/docker/server/config/config-postgres.properties
+++ b/docker/server/config/config-postgres.properties
@@ -24,4 +24,4 @@ conductor.elasticsearch.indexName=conductor
 conductor.elasticsearch.clusterHealthColor=yellow
 
 # Load sample kitchen sink workflow
-loadSample=true
+loadSample=false
