--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -60,7 +60,7 @@ services:
       test: [ "CMD", "redis-cli","ping" ]
 
   elasticsearch:
-    image: v1r3n/elasticsearch:6.8.12
+    image: elasticsearch:6.8.15
     container_name: elasticsearch
     environment:
       - "ES_JAVA_OPTS=-Xms512m -Xmx1024m"
