--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -13,9 +13,9 @@
 
 spring.application.name=conductor
 springdoc.api-docs.path=/api-docs
-loadSample=false
+loadSample=true
 
-conductor.db.type=redis_standalone
+conductor.db.type=memory
 conductor.queue.type=redis_standalone
 
 conductor.indexing.enabled=false
@@ -23,6 +23,7 @@ conductor.indexing.enabled=false
 #Redis configuration details.
 #format is host:port:rack separated by semicolon
 #Auth is supported. Password is taken from host[0]. format: host:port:rack:password
+#conductor.redis.hosts=host1:port:rack;host2:port:rack:host3:port:rack
 conductor.redis.hosts=localhost:6379:us-east-1c
 
 #namespace for the keys stored in Dynomite/Redis
