--- a/docker/server/config/config-docker-internal.properties
+++ b/docker/server/config/config-docker-internal.properties
@@ -6,7 +6,7 @@ conductor.db.type=redis_standalone
 conductor.queue.type=redis_standalone
 # Dynomite Cluster details.
 # format is host:port:rack separated by semicolon
-conductor.redis.hosts=127.0.0.1:6379:us-east-1c
+conductor.redis.hosts=kubernetes.docker.internal:6379:us-east-1c
 
 # Namespace for the keys stored in Dynomite/Redis
 conductor.redis.workflowNamespacePrefix=conductor
@@ -27,7 +27,7 @@ conductor.redis.queuesNonQuorumPort=22122
 
 # Elastic search instance indexing is disabled.
 conductor.indexing.enabled=true
-conductor.elasticsearch.url=http://127.0.0.1:9200
+conductor.elasticsearch.url=http://kubernetes.docker.internal:9200
 conductor.elasticsearch.indexReplicasCount=0
 
 # Load sample kitchen sink workflow
