docker build with community server

--- a/docker/server/config/config.properties
+++ b/docker/server/config/config.properties
@@ -1,38 +1,21 @@
-# Servers.
-conductor.grpc-server.enabled=false
-
 # Database persistence type.
-conductor.db.type=dynomite
-
-# Dynomite Cluster details.
-# format is host:port:rack separated by semicolon
-conductor.redis.hosts=dyno1:8102:us-east-1c
-
-# Dynomite cluster name
-conductor.redis.clusterName=dyno1
-
-# Namespace for the keys stored in Dynomite/Redis
+conductor.db.type=redis_standalone
+conductor.redis.hosts=localhost:6379:us-east-1c
+conductor.redis-lock.serverAddress=redis://localhost:6379
+conductor.redis.taskDefCacheRefreshInterval=1
 conductor.redis.workflowNamespacePrefix=conductor
-
-# Namespace prefix for the dyno queues
 conductor.redis.queueNamespacePrefix=conductor_queues
 
-# No. of threads allocated to dyno-queues (optional)
-queues.dynomite.threads=10
 
 # By default with dynomite, we want the repairservice enabled
 conductor.app.workflowRepairServiceEnabled=true
 
-# Non-quorum port used to connect to local redis.  Used by dyno-queues.
-# When using redis directly, set this to the same port as redis server
-# For Dynomite, this is 22122 by default or the local redis-server port used by Dynomite.
-conductor.redis.queuesNonQuorumPort=22122
 
 # Elastic search instance indexing is enabled.
 conductor.indexing.enabled=true
 
 # Transport address to elasticsearch
-conductor.elasticsearch.url=http://es:9200
+conductor.elasticsearch.url=http://localhost:9200
 
 # Name of the elasticsearch cluster
 conductor.elasticsearch.indexName=conductor
