--- a/docker/server/config/config-local.properties
+++ b/docker/server/config/config-local.properties
@@ -26,12 +26,11 @@ conductor.app.workflowRepairServiceEnabled=true
 conductor.redis.queuesNonQuorumPort=22122
 
 # Elastic search instance indexing is disabled.
-conductor.indexing.enabled=true
+conductor.indexing.enabled=false
 conductor.elasticsearch.url=http://localhost:9200
 
 conductor.elasticsearch.indexReplicasCount=0
 
 # Load sample kitchen sink workflow
 loadSample=true
-
-conductor.elasticsearch.clusterHealthColor=yellow
+conductor.elasticsearch.version=7
