--- a/docker/server/config/config-local.properties
+++ b/docker/server/config/config-local.properties
@@ -6,7 +6,7 @@ conductor.db.type=redis_standalone
 conductor.queue.type=redis_standalone
 # Dynomite Cluster details.
 # format is host:port:rack separated by semicolon
-conductor.redis.hosts=localhost:6379:us-east-1c
+conductor.redis.hosts=rs:6379:us-east-1c
 
 # Namespace for the keys stored in Dynomite/Redis
 conductor.redis.workflowNamespacePrefix=conductor
@@ -27,7 +27,7 @@ conductor.redis.queuesNonQuorumPort=22122
 
 # Elastic search instance indexing is disabled.
 conductor.indexing.enabled=false
-conductor.elasticsearch.url=http://localhost:9200
+conductor.elasticsearch.url=es:9200
 
 conductor.elasticsearch.indexReplicasCount=0
 
