--- a/docker/server/config/config.properties
+++ b/docker/server/config/config.properties
@@ -27,8 +27,8 @@ conductor.elasticsearch.indexName=conductor
 # conductor.metrics-logger.reportPeriodSeconds=15
 
 # Additional modules for metrics collection exposed to Prometheus (optional)
-# conductor.metrics-prometheus.enabled=true
-# management.endpoints.web.exposure.include=prometheus
+conductor.metrics-prometheus.enabled=true
+management.endpoints.web.exposure.include=prometheus
 
 # To enable Workflow/Task Summary Input/Output JSON Serialization, use the following:
 # conductor.app.summary-input-output-json-serialization.enabled=true
