--- a/docker/server/config/config-local.properties
+++ b/docker/server/config/config-local.properties
@@ -26,7 +26,7 @@ conductor.app.workflowRepairServiceEnabled=true
 conductor.redis.queuesNonQuorumPort=22122
 
 # Elastic search instance indexing is disabled.
-conductor.indexing.enabled=false
+conductor.indexing.enabled=true
 conductor.elasticsearch.url=es:9200
 
 conductor.elasticsearch.indexReplicasCount=0
@@ -34,3 +34,6 @@ conductor.elasticsearch.indexReplicasCount=0
 # Load sample kitchen sink workflow
 loadSample=true
 conductor.elasticsearch.version=7
+conductor.metrics-prometheus.enabled=true
+management.endpoints.web.exposure.include=prometheus
+conductor.elasticsearch.cluster-health-color=yellow
