--- a/docker/server/config/config-mysql.properties
+++ b/docker/server/config/config-mysql.properties
@@ -23,3 +23,7 @@ conductor.elasticsearch.indexName=conductor
 
 # Load sample kitchen sink workflow
 loadSample=true
+conductor.elasticsearch.cluster-health-color=yellow
+conductor.metrics-prometheus.enabled=true
+management.endpoints.web.exposure.include=prometheus
+conductor.elasticsearch.version=7
