--- a/docker/server/config/config-local-postgres.properties
+++ b/docker/server/config/config-local-postgres.properties
@@ -1,18 +1,20 @@
+conductor.grpc-server.enabled=false
 # Database persistence type.
 conductor.db.type=postgres
-
-# postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+conductor.db.schema=conductor
+conductor.postgres.schema=conductor
+conductor.db.queue.type=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?schema=conductor&ApplicationName=conductor
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-
-# Elastic search instance indexing is enabled.
-conductor.indexing.enabled=true
 conductor.indexing.type=postgres
+conductor.indexing.enabled=true
 
-# Additional modules for metrics collection exposed to Prometheus (optional)
-conductor.metrics-prometheus.enabled=true
-management.endpoints.web.exposure.include=prometheus
-
-# Load sample kitchen sink workflow
-loadSample=true
+# The following is to force Elastic Search IndexDAO not to run. If it just missing it will still try to start v6
+conductor.elasticsearch.version=postgres
+flyway.schema=clo-workflow
+# Hikari pool sizes are -1 by default and prevent startup
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+# Elastic search instance indexing is enabled.
+#conductor.indexing.enabled=false
