--- a/docker/server/config/config.properties
+++ b/docker/server/config/config.properties
@@ -1,37 +1,40 @@
-# Database persistence type.
-conductor.db.type=redis_standalone
-conductor.redis.hosts=localhost:6379:us-east-1c
-conductor.redis-lock.serverAddress=redis://localhost:6379
-conductor.redis.taskDefCacheRefreshInterval=1
-conductor.redis.workflowNamespacePrefix=conductor
-conductor.redis.queueNamespacePrefix=conductor_queues
+# See README in the docker for configuration guide
+
+conductor.db.type=SET_THIS
+
+# =====================================================#
+#              Redis Configuration Properties
+# =====================================================#
+#conductor.db.type=redis_standalone
+
+# The last part MUST be us-east-1c, it is not used and is kept for backwards compatibility
+# conductor.redis.hosts=rs:6379:us-east-1c
+#
+
+# conductor.redis-lock.serverAddress=redis://rs:6379
+# conductor.redis.taskDefCacheRefreshInterval=1
+# conductor.redis.workflowNamespacePrefix=conductor
+# conductor.redis.queueNamespacePrefix=conductor_queues
 
 
-# By default with dynomite, we want the repairservice enabled
-conductor.app.workflowRepairServiceEnabled=true
+# =====================================================#
+#              Postgres Configuration Properties
+# =====================================================#
 
+# conductor.db.type=postgres
+# spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+# spring.datasource.username=postgres
+# spring.datasource.password=postgres
+# Additionally you can use set the spring.datasource.XXX properties for connection pool size etc.
 
-# Elastic search instance indexing is enabled.
-conductor.indexing.enabled=true
+# If you want to use Postgres as indexing store set the following
+# conductor.indexing.enabled=true
+# conductor.indexing.type=postgres
 
-# Transport address to elasticsearch
-conductor.elasticsearch.url=http://localhost:9200
+# When using Elasticsearch 7 for indexing, set the following
 
-# Name of the elasticsearch cluster
-conductor.elasticsearch.indexName=conductor
-#conductor.event-queues.amqp.queueType=classic
-#conductor.event-queues.amqp.sequentialMsgProcessing=true
+# conductor.indexing.enabled=true
+# conductor.elasticsearch.url=http://es:9200
+# conductor.elasticsearch.version=7
+# conductor.elasticsearch.indexName=conductor
 
-# Additional modules for metrics collection exposed via logger (optional)
-# conductor.metrics-logger.enabled=true
-# conductor.metrics-logger.reportPeriodSeconds=15
-
-# Additional modules for metrics collection exposed to Prometheus (optional)
-# conductor.metrics-prometheus.enabled=true
-# management.endpoints.web.exposure.include=prometheus
-
-# To enable Workflow/Task Summary Input/Output JSON Serialization, use the following:
-# conductor.app.summary-input-output-json-serialization.enabled=true
-
-# Load sample kitchen sink workflow
-loadSample=true
