docker compose changes

--- a/docker/server/config/config-redis.properties
+++ b/docker/server/config/config-redis.properties
@@ -7,12 +7,14 @@ conductor.redis.taskDefCacheRefreshInterval=1
 conductor.redis.workflowNamespacePrefix=conductor
 conductor.redis.queueNamespacePrefix=conductor_queues
 
+#Use redis queues
+conductor.queue.type=redis_standalone
+
 # Elastic search instance indexing is enabled.
 conductor.indexing.enabled=true
-
-# Transport address to elasticsearch
 conductor.elasticsearch.url=http://es:9200
 conductor.elasticsearch.indexName=conductor
+conductor.elasticsearch.version=7
 
 # Additional modules for metrics collection exposed to Prometheus (optional)
 conductor.metrics-prometheus.enabled=true
