--- a/docker/docker-compose-postgres.yaml
+++ b/docker/docker-compose-postgres.yaml
@@ -3,7 +3,7 @@ version: '2.3'
 services:
   conductor-server:
     environment:
-      - CONFIG_PROP=config-local-postgres.properties
+      - CONFIG_PROP=config-postgres.properties
     image: conductor:server
     container_name: conductor-server
     build:
@@ -19,13 +19,13 @@ services:
       timeout: 30s
       retries: 12
     links:
-      - elasticsearch:es
-      - redis:rs
+      - conductor-elasticsearch:es
+      - conductor-redis:rs
       - postgres:postgresdb
     depends_on:
-      elasticsearch:
+      conductor-elasticsearch:
         condition: service_healthy
-      redis:
+      conductor-redis:
         condition: service_healthy
       postgres:
         condition: service_healthy
@@ -57,7 +57,7 @@ services:
         max-size: "1k"
         max-file: "3"
 
-  redis:
+  conductor-redis:
     image: redis:6.2.3-alpine
     volumes:
       - ./redis.conf:/usr/local/etc/redis/redis.conf
@@ -68,21 +68,20 @@ services:
     healthcheck:
       test: [ "CMD", "redis-cli","ping" ]
 
-  elasticsearch:
-    image: elasticsearch:6.8.15
-    container_name: elasticsearch
+  conductor-elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.11
     environment:
       - "ES_JAVA_OPTS=-Xms512m -Xmx1024m"
-      - transport.host=0.0.0.0
-      - discovery.type=single-node
       - xpack.security.enabled=false
+      - discovery.type=single-node
+    volumes:
+      - esdata-conductor:/usr/share/elasticsearch/data
     networks:
       - internal
     ports:
-      - 9200:9200
-      - 9300:9300
+      - 9201:9200
     healthcheck:
-      test: wget http://localhost:9200/ -O /dev/null
+      test: curl http://localhost:9200/_cluster/health -o /dev/null
       interval: 5s
       timeout: 5s
       retries: 12
