Update locked dependencies, and also ignore log4j strictness lock for client and common libraries

--- a/client/build.gradle
+++ b/client/build.gradle
@@ -15,6 +15,16 @@ configurations.all {
     exclude group: 'amazon', module: 'aws-java-sdk'
 }
 
+dependencyLock {
+    skippedDependencies = [
+            "org.apache.logging.log4j:log4j-api",
+            "org.apache.logging.log4j:log4j-core",
+            "org.apache.logging.log4j:log4j-jul",
+            "org.apache.logging.log4j:log4j-slf4j-impl",
+            "org.apache.logging.log4j:log4j-web",
+    ]
+}
+
 dependencies {
     compileOnly 'org.jetbrains:annotations:23.0.0'
 
