--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -17,18 +17,20 @@
 ext {
     revActivation = '2.0.0'
     revAwaitility = '3.1.6'
-    revAwsSdk = '1.11.86'
+    revAwsSdk = '1.12.535'
     revBval = '2.0.5'
     revCassandra = '3.10.2'
     revCassandraUnit = '3.11.2.0'
+    revCommonsCompress = '1.24.0'
     revCommonsIo = '2.7'
     revDynoQueues = '2.0.20'
-    revElasticSearch6 = '6.8.12'
+    revElasticSearch6 = '6.8.17'
     revEmbeddedRedis = '0.6'
     revEurekaClient = '1.10.10'
+    revFasterXml = '2.15.0'
     revGroovy = '2.5.22'
     revGrpc = '1.+'
-    revGuava = '30.0-jre'
+    revGuava = '32.0-jre'
     revHamcrestAllMatchers = '1.8'
     revHealth = '1.1.+'
     revJAXB = '2.3.3'
