--- a/docker/server/config/config.properties
+++ b/docker/server/config/config.properties
@@ -1,5 +1,7 @@
 # See README in the docker for configuration guide
 
+# db.type determines the type of database used
+# See various configurations below for the values
 conductor.db.type=SET_THIS
 
 # =====================================================#
