--- a/docker/server/config/config-postgres.properties
+++ b/docker/server/config/config-postgres.properties
@@ -2,13 +2,16 @@
 conductor.db.type=postgres
 
 # postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://postgresdb:5432/postgres
+spring.datasource.username=conductor
+spring.datasource.password=conductor
 
 # Elastic search instance indexing is enabled.
 conductor.indexing.enabled=true
-conductor.indexing.type=postgres
+conductor.elasticsearch.url=http://es:9200
+conductor.elasticsearch.indexName=conductor
+conductor.elasticsearch.version=7
+conductor.elasticsearch.clusterHealthColor=yellow
 
 # Additional modules for metrics collection exposed to Prometheus (optional)
 conductor.metrics-prometheus.enabled=true
